# robot_2.0

./: CMakeLists.txt  README.md
doc/: Diagrams.docx
include/: command_receiver.h  console_command_receiver.h  motor.h  robot_controller.h  server_command_receiver.h  simulated_motor.h
src/: command_receiver.cpp  console_command_receiver.cpp  main.cpp  robot_controller.cpp  server_command_receiver.cpp  simulated_motor.cpp
